RESOLVED FIXED47588
[GTK] Small cleanup in PluginViewGtk
https://bugs.webkit.org/show_bug.cgi?id=47588
Summary [GTK] Small cleanup in PluginViewGtk
Xan Lopez
Reported 2010-10-13 06:37:53 PDT
SSIA.
Attachments
cleanup.diff (4.53 KB, patch)
2010-10-13 06:40 PDT, Xan Lopez
no flags
Xan Lopez
Comment 1 2010-10-13 06:40:02 PDT
Created attachment 70605 [details] cleanup.diff
Martin Robinson
Comment 2 2010-10-13 19:01:59 PDT
How did this code originate? Is it important to preserve the assertion?
Xan Lopez
Comment 3 2010-10-13 23:53:02 PDT
(In reply to comment #2) > How did this code originate? Is it important to preserve the assertion? The actualDepth was used before to see if we have an alpha channel, but in the current code we use cairo_surface_get_content for that. We can still keep the assertion (doing it differently) if you think it's important, I'm not very sure that it is.
Martin Robinson
Comment 4 2010-10-13 23:55:34 PDT
Comment on attachment 70605 [details] cleanup.diff Seems reasonable.
WebKit Commit Bot
Comment 5 2010-10-14 12:29:51 PDT
Comment on attachment 70605 [details] cleanup.diff Clearing flags on attachment: 70605 Committed r69793: <http://trac.webkit.org/changeset/69793>
WebKit Commit Bot
Comment 6 2010-10-14 12:29:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.