2010-10-14  Xan Lopez  <xlopez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Small cleanup in PluginViewGtk
        https://bugs.webkit.org/show_bug.cgi?id=47588

        Remove some dead code and use PlatformRefPtr for cairo surfaces.

        No new tests, only refactoring.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::paint):

Canonical link: https://commits.webkit.org/60380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69793 268f45cc-cd09-0410-ab3c-d52691b4dbfc